<resources>
    <string name="app_name">ListApp</string>
    <string name="nombre_item">Nombre Item</string>
    <string name="descripci_n_item">Descripción Item</string>
    <string name="escoger_imagen">Escoger Imagen</string>
    <string name="anyadir_tem">Añadir Ítem</string>
    <string name="nombre_lista">Nombre Lista</string>
    <string name="anyadir_lista">Añadir Lista</string>
    <string name="imagen_de_la_lista">Imagen de la lista</string>
    <string name="boton_de_anyadir_tem">Botón de añadir ítem</string>
    <string name="imagen_del_item">Imagen del ítem</string>
    <string name="descripcion_del_item">Descripción del ítem</string>
    <string name="notificame">Notifícame</string>
    <string name="vaciar_papelera">Vaciar Papelera</string>
    <string name="buscar">Buscar...</string>
    <string name="boton_de_papelera">Botón de papelera</string>
    <string name="boton_de_usuario">Botón de usuario</string>
    <string name="boton_de_anyadir_lista">Botón de añadir lista</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="apellidos">Apellidos</string>
    <string name="actualizar_usuario">Actualizar Usuario</string>
    <string name="editar_usuario">Editar Usuario</string>
    <string name="email_usuario_a_compartir">Email Usuario A Compartir</string>
    <string name="compartir">Compartir</string>
    <string name="listas_compartidas">Listas Compartidas</string>
    <string name="boton_de_listas_compartidas">Botón de listas compartidas</string>
    <string name="boton_de_papelera_de_listas_compartidas">Botón de papelera de listas compartidas</string>
    <string name="listas_personales">Listas Personales</string>
    <string name="boton_de_listas_personales">Botón de listas personales</string>
    <string name="nombre_lista_compartida">Nombre Lista Compartida</string>
    <string name="nombre_creador">Nombre Creador</string>
    <string name="items">ÍTEMS</string>
    <string name="descripcion">DESCRIPCIÓN</string>
    <string name="ver_listas">Ver listas</string>
    <string name="boton_de_ver_listas">Botón de ver listas</string>
    <string name="ver_usuarios">Ver usuarios</string>
    <string name="boton_de_ver_usuarios">Botón de ver usuarios</string>
    <string name="ver_items">Ver ítems</string>
    <string name="boton_de_ver_items">Botón de ver ítems</string>
    <string name="nombre_item_admin">Nombre Item Admin</string>
    <string name="nombre_lista_admin">Nombre Lista Admin</string>
    <string name="nombre_usuario_admin">Nombre Usuario Admin</string>
    <string name="se_recomiendan_imagenes_de_proporciones_1_1">Se recomiendan imágenes de proporciones 1:1</string>
</resources>