<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.createLista.CreateListaFragment"
    android:background="#6c9ce0" >

    <EditText
        android:id="@+id/editTextNombreLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/nombre_lista"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:autofillHints="name"
        android:inputType="text" />

    <Button
        android:id="@+id/chooseImageListaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="#426cf5"
        android:textColor="#FFFFFF"
        android:text="@string/escoger_imagen" />

    <Button
        android:id="@+id/createListaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:backgroundTint="#426cf5"
        android:textColor="#FFFFFF"
        android:layout_marginTop="30dp"
        android:text="@string/anyadir_lista" />

</LinearLayout>