<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6c9ce0"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="250dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white" >

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/imagenListaDetalles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/imagen_de_la_lista" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nombreListaDetalles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="8dp"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/nombre_lista"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#426cf5">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerItem"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="1"
            tools:listitem="@layout/view_item_item"
            android:layout_marginTop="30dp" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_gravity="center" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:src="@android:drawable/ic_input_add"
            android:visibility="visible"
            tools:visibility="visible"
            android:contentDescription="@string/boton_de_anyadir_tem"
            android:focusable="true" />

    </LinearLayout>

</LinearLayout>