<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#6c9ce0"
    tools:context=".ui.userPanel.UserPanelFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/search_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@android:drawable/ic_menu_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/voice_search_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            android:focusable="true" />

        <ImageView
            android:id="@+id/voice_search_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:src="@android:drawable/ic_btn_speak_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:background="@android:color/transparent"
            android:hint="@string/buscar"
            android:inputType="text"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toBottomOf="@id/search_image_view"
            app:layout_constraintEnd_toStartOf="@id/voice_search_query"
            app:layout_constraintStart_toEndOf="@id/search_image_view"
            android:autofillHints="name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="1"
            tools:listitem="@layout/view_lista_item" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/trashButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:src="@android:drawable/ic_menu_delete"
                android:visibility="visible"
                tools:visibility="visible"
                android:contentDescription="@string/boton_de_papelera"
                android:focusable="true" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/userDetailsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:src="@android:drawable/star_big_off"
                android:visibility="visible"
                tools:visibility="visible"
                android:contentDescription="@string/boton_de_usuario"
                android:focusable="true" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginStart="100dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:src="@android:drawable/ic_input_add"
                android:visibility="visible"
                tools:visibility="visible"
                android:contentDescription="@string/boton_de_anyadir_lista"
                android:focusable="true" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>